# southbound

./: Cargo.toml  README.md
.github/workflows/: publish.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
lib/: Cargo.toml
src/: error.rs  lib.rs  main.rs
