[package]
name = "southbound"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/eventually-engineered/southbound"
keywords = ["SQL", "migrations"]
categories = ["SQL"]

[dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
# https://github.com/mehcode/config-rs/blob/master/examples/hierarchical-env/src/settings.rs
config = { version = "0.11", features = ["json"] }
glob = "0.3.0"
lazy_static = "1"
regex = { version = "1", default-features = false, features = ["std", "unicode-case"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.8.21"
thiserror = "1.0.29"


[dev-dependencies]
dotenv = "0.15.0"
tempfile = "3.2.0"
