[package]
name = "southbound"
version = "0.1.0"
authors = ["seancarroll"]
edition = "2018"
readme = "../README.md"
keywords = ["sql", "migrations"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/southbound"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
