[package]
name = "southbound"
description = "Rust SQL Migrations"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2018"
readme = "../README.md"
keywords = ["sql", "migrations"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/southbound"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
